Change Formatter to Spotless